# partner_bitrix24_cabinet

./: .env.example  .gitignore  README.md  architecture.md  docker-compose.dev.yml
b24-transfer-lead/: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  architecture.md  create_admin.py  docker-compose.yml  nginx.conf  pyproject.toml
b24-transfer-lead/src/backend/: main.py
b24-transfer-lead/src/backend/api/v1/: auth.py  b24_entities.py  dependencies.py  leads.py  public.py  users.py  webhook.py  workflows.py
b24-transfer-lead/src/backend/core/: config.py  database.py
b24-transfer-lead/src/backend/models/: __init__.py  lead.py  lead_field.py  user.py  user_workflow_access.py  workflow.py  workflow_field_mapping.py
b24-transfer-lead/src/backend/services/: auth.py  bitrix24.py  database.py
b24-transfer-lead/src/backend/utils/: bitrix24_url.py  cache.py  csv_parser.py  migrate_db.py  phone.py
b24-transfer-lead/src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
b24-transfer-lead/src/frontend/src/: App.tsx
b24-transfer-lead/src/frontend/src/components/: CSVUpload.tsx  Layout.tsx  LeadForm.tsx  LeadsTable.tsx  ProtectedRoute.tsx
b24-transfer-lead/src/frontend/src/pages/: AdminUsersPage.tsx  AdminWorkflowsPage.tsx  LeadsPage.tsx  LoginPage.tsx  WorkflowSettingsPage.tsx  WorkflowsPage.tsx
b24-transfer-lead/src/frontend/src/services/: api.ts
b24-transfer-lead/src/frontend/src/stores/: authStore.ts  leadsStore.ts  workflowStore.ts
b24-transfer-lead/src/frontend/src/types/: index.ts
backend/: Dockerfile  (+1 more)
(+156 files in other folders)
